force-app/main/default/objects/Client__c/fields/Added_Manually__c.field-meta.xml
<CustomField>
    <fullName>Added_Manually__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Added Manually</label>
    <type>Checkbox</type>
</CustomField>