force-app/main/default/objects/Client__c/fields/Client_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Client Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>