force-app/main/default/objects/Client__c/fields/Unique_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Client_Id__c</fullName>
    <label>Unique Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>