force-app/main/default/objects/Client__c/validationRules/Email_Or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Or_Phone_Required</fullName>
    <active>true</active>
    <description>As a Legal Advisor, I need a way to reach out my Clients</description>
    <errorConditionFormula>AND(
    ISBLANK(Email__c),
    ISBLANK(Phone__c)
)</errorConditionFormula>
    <errorMessage>Email or Phone need to be filled in</errorMessage>
</ValidationRule>